--- a/index.html
+++ b/index.html
@@ -56,19 +56,13 @@
                     <div class="col-md-8">
                         <!--SOCIAL ICONS-->
                         <figure class="ts-social-icons mb-4">
-                            <a href="#" class="mr-3">
+                            <a href="https://www.facebook.com/NavanithaKrish" class="mr-3">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="#" class="mr-3">
+                            <a href="https://twitter.com/NavanithaKris13" class="mr-3">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="#" class="mr-3">
-                                <i class="fab fa-pinterest"></i>
-                            </a>
-                            <a href="#" class="mr-3">
-                                <i class="fab fa-slack"></i>
-                            </a>
-                            <a href="#" class="mr-3">
+                            <a href="https://www.instagram.com/choco__boy__krish/?hl=en" class="mr-3">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </figure>
@@ -151,7 +145,7 @@
                                 <!--<i class="fa fa-download small mr-2"></i>-->
                                 <!--Download CV-->
                             <!--</a>-->
-                            <a href="#contact" class="ts-btn-effect mr-2">
+                            <a href="https://drive.google.com/file/d/1c6s3SFBIJCp6_m-C9CdATTMIrxzzHhhe/view?usp=sharing" class="ts-btn-effect mr-2">
                                 <span class="ts-visible btn btn-outline-light">
                                     <i class="fa fa-download small mr-2"></i>
                                     Download CV
@@ -679,35 +673,30 @@
                             <div class="col-md-4">
                                 <h3>Let’s Connect</h3>
                                 <div class="ts-column-count-sm-2">
-                                    <a href="#" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <a href="https://www.facebook.com/NavanithaKrish" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-facebook-f"></i>
                                     </span>
                                         <span>Facebook</span>
                                     </a>
                                     <!--end link-->
-                                    <a href="#" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <a href="https://twitter.com/NavanithaKris13" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-twitter"></i>
                                     </span>
                                         <span>Twitter</span>
                                     </a>
                                     <!--end link-->
-                                    <a href="#" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <a href="https://www.instagram.com/choco__boy__krish/?hl=en" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-instagram"></i>
                                     </span>
                                         <span>Instagram</span>
                                     </a>
                                     <!--end link-->
-                                    <a href="#" class="mb-3 d-flex text-white ts-align__vertical">
-                                    <span class="ts-circle__xs border border-white ts-border-light mr-4">
-                                        <i class="fab fa-pinterest-p"></i>
-                                    </span>
-                                        <span>Pinterest</span>
-                                    </a>
+                                  
                                     <!--end link-->
-                                    <a href="#" class="mb-3 d-flex text-white ts-align__vertical">
+                                    <a href="https://join.skype.com/invite/nWoIUNEWiUux" class="mb-3 d-flex text-white ts-align__vertical">
                                     <span class="ts-circle__xs border border-white ts-border-light mr-4">
                                         <i class="fab fa-skype"></i>
                                     </span>
